--- a/PersonalSite/about.html
+++ b/PersonalSite/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Home | Romeo Bagunu</title>
+    <title>About | Romeo Bagunu</title>
     <meta content="Personal site for KC web developer Romeo Bagunu." name="description">
     <meta content="Web Development, Full Stack, .NET" name="keywords">
 
@@ -62,7 +62,7 @@
 
             <div class="header-social-links">
                 <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/romeobagunu" target="_blank" class="twitter"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/romeobagunu" target="_blank"><i class="bi bi-github"></i></a>
             </div>
 
         </div>
