--- a/PersonalSite/classmates.html
+++ b/PersonalSite/classmates.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Home | Romeo Bagunu</title>
+    <title>Links | Romeo Bagunu</title>
     <meta content="Personal site for KC web developer Romeo Bagunu." name="description">
     <meta content="Web Development, Full Stack, .NET" name="keywords">
 
@@ -62,7 +62,7 @@
 
             <div class="header-social-links">
                 <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/romeobagunu" target="_blank" class="twitter"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/romeobagunu" target="_blank"><i class="bi bi-github"></i></a>
             </div>
 
         </div>
@@ -73,8 +73,8 @@
             <div class="section-title">
                 <h2>Centriq Classmates</h2>
             </div>
-            <div class="row py-5 d-flex justify-content-center">
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+            <div class="row d-flex justify-content-center">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://mckinneywebdev.com" target="_blank"><img src="/assets/img/classmates/Sean.jpg" class="classmate-img" alt="Profile picture of my classmate Sean." /></a>
                     </div>
@@ -87,7 +87,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://zaksisler.com/" target="_blank"><img src="/assets/img/classmates/Zak.jpg" class="classmate-img" alt="Profile picture of my classmate Zak." /></a>
                     </div>
@@ -100,7 +100,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://austinwallace.net/" target="_blank"><img src="/assets/img/classmates/Austin.jpg" class="classmate-img" alt="Profile picture of my classmate Austin." /></a>
                     </div>
@@ -114,8 +114,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row py-5 d-flex justify-content-center">
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+            <div class="row d-flex justify-content-center">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://michaelredifer.com/" target="_blank"><img src="/assets/img/classmates/Michael.jpg" class="classmate-img" alt="Profile picture of my classmate Michael." /></a>
                     </div>
@@ -128,7 +128,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://fountaincitydev.com/" target="_blank"><img src="/assets/img/classmates/Connor.jpg" class="classmate-img" alt="Profile picture of my classmate Connor." /></a>
                     </div>
@@ -141,48 +141,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                    <div class="mx-auto">
-                        <a href="http://kaylawin.com" target="_blank"><img src="/assets/img/classmates/Kayla.jpg" class="classmate-img" alt="Profile picture of my classmate Kayla." /></a>
-                    </div>
-                    <div class="mx-auto p-3">
-                        <h5>
-                            Kayla Nguyen
-                            <a href="https://www.linkedin.com/in/kayla-n-nguyen/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                            <br />
-                            <a href="http://kaylawin.com/" target="_blank">Personal Site</a>
-                        </h5>
-                    </div>
-                </div>
-            </div>
-            <div class="row py-5 d-flex justify-content-center">
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                    <div class="mx-auto">
-                        <a href="http://alexklee.net/" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Alex." /></a>
-                    </div>
-                    <div class="mx-auto p-3">
-                        <h5>
-                            Alex Klee
-                            <a href="https://www.linkedin.com/in/alex-klee-6b962a232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                            <br />
-                            <a href="http://alexklee.net/" target="_blank">Personal Site</a>
-                        </h5>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
-                    <div class="mx-auto">
-                        <a href="http://jazminerizo.com/" target="_blank"><img src="/assets/img/classmates/Jazmine.jpg" class="classmate-img" alt="Profile picture of my classmate Jazmine." /></a>
-                    </div>
-                    <div class="mx-auto p-3">
-                        <h5>
-                            Jazmine Rizo
-                            <a href="https://www.linkedin.com/in/jazmine-rizo-7aa283232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                            <br />
-                            <a href="http://jazminerizo.com/" target="_blank">Personal Site</a>
-                        </h5>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://mattroberts-dev.com/" target="_blank"><img src="/assets/img/classmates/Matt.jpg" class="classmate-img" alt="Profile picture of my classmate Matt." /></a>
                     </div>
@@ -196,8 +155,49 @@
                     </div>
                 </div>
             </div>
-            <div class="row py-5 d-flex justify-content-center">
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+            <div class="row d-flex justify-content-center">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://alexklee.net/" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Alex." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Alex Klee
+                            <a href="https://www.linkedin.com/in/alex-klee-6b962a232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://alexklee.net/" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://jazminerizo.com/" target="_blank"><img src="/assets/img/classmates/Jazmine.jpg" class="classmate-img" alt="Profile picture of my classmate Jazmine." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Jazmine Rizo
+                            <a href="https://www.linkedin.com/in/jazmine-rizo-7aa283232/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://jazminerizo.com/" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                    <div class="mx-auto">
+                        <a href="http://kaylawin.com" target="_blank"><img src="/assets/img/classmates/Kayla.jpg" class="classmate-img" alt="Profile picture of my classmate Kayla." /></a>
+                    </div>
+                    <div class="mx-auto p-3">
+                        <h5>
+                            Kayla Nguyen
+                            <a href="https://www.linkedin.com/in/kayla-n-nguyen/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <br />
+                            <a href="http://kaylawin.com/" target="_blank">Personal Site</a>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="#" target="_blank"><img src="/assets/img/classmates/Ben.jpg" class="classmate-img" alt="Profile picture of my classmate Ben." /></a>
                     </div>
@@ -210,7 +210,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://paytonvon.com/" target="_blank"><img src="/assets/img/classmates/Payton.jpg" class="classmate-img" alt="Profile picture of my classmate Payton." /></a>
                     </div>
@@ -223,7 +223,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="http://projectpeacock.net/" target="_blank"><img src="/assets/img/classmates/Justin.jpg" class="classmate-img" alt="Profile picture of my classmate Justin." /></a>
                     </div>
@@ -237,8 +237,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row py-5 d-flex justify-content-center">
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+            <div class="row d-flex justify-content-center">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="#" target="_blank"><img src="/assets/img/classmates/Ian.jpg" class="classmate-img" alt="Profile picture of my classmate Ian." /></a>
                     </div>
@@ -251,7 +251,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="#" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Enrique." /></a>
                     </div>
@@ -264,7 +264,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
+                <div class="pt-3 col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
                         <a href="#" target="_blank"><img src="/assets/img/classmates/Placeholder.png" class="classmate-img" alt="Profile picture of my classmate Sam." /></a>
                     </div>
@@ -298,7 +298,7 @@
     </footer><!-- End  Footer -->
 
     <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow py-5 gx-5 p-2-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow gx-5 p-2-up-short"></i></a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter.js"></script>
