--- a/PersonalSite/contact.html
+++ b/PersonalSite/contact.html
@@ -62,7 +62,7 @@
 
             <div class="header-social-links">
                 <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/romeobagunu" target="_blank" class="twitter"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/romeobagunu" target="_blank"><i class="bi bi-github"></i></a>
             </div>
 
         </div>
